fix: alignments

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -160,3 +160,8 @@ a {
     margin-left: 10px;
   }
 }
+.inventory-storage-title{
+  .page-title{
+    margin-left: 12.5%;
+  }
+}
